# komanawa-simple-farm-model

./: .gitignore  LICENSE  README.rst  pyproject.toml
dairy_model_validataion/: LUDF-2022-Data-Sheet-30-05-2022.csv  LUDF-Weekly-Monitoring-Sheet-2022-2023.csv  LUDF-Weekly-Monitoring-Sheet-2023-2024.csv  kok_et_al_2018-2019_pg.csv  kok_et_al_2019-2020_pg.csv  kok_et_al_2022.py  ludf.py  macdonal_2011.py  op_expenses.py  supporting_script.py  validation_overview.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_images/: inheritance-03de95c17323390178db7f9e3b2251cc1ab04f17.png.map  inheritance-935589c228ebfb3c702d7516f882e8fac597462b.png.map  inheritance-aa79a87721cfb5eef1fc6f5e6286a0937754d2f2.png.map  inheritance-b30d4347df5088423527947b51426fa6017f05be.png.map  inheritance-efd89283bb5780a39f07de4b467f2748e55d65ee.png.map
docs/_modules/: index.html
docs/_modules/komanawa/simple_farm_model/: base_simple_farm_model.html  run_multiprocess.html  s_curve_explore.html  simple_dairy_model.html  stock_rate_conversion.html  utils.html
docs/_sources/autoapi/komanawa/simple_farm_model/: index.rst.txt
docs/_sources/autoapi/komanawa/simple_farm_model/base_simple_farm_model/: index.rst.txt
docs/_sources/autoapi/komanawa/simple_farm_model/memory_test/: index.rst.txt
docs/_sources/autoapi/komanawa/simple_farm_model/run_multiprocess/: index.rst.txt
docs/_sources/autoapi/komanawa/simple_farm_model/s_curve_explore/: index.rst.txt
docs/_sources/autoapi/komanawa/simple_farm_model/simple_dairy_model/: index.rst.txt
docs/_sources/autoapi/komanawa/simple_farm_model/speed_test/: index.rst.txt
docs/_sources/autoapi/komanawa/simple_farm_model/stock_rate_conversion/: index.rst.txt
docs/_sources/autoapi/komanawa/simple_farm_model/utils/: index.rst.txt
docs/_sources/autoapi/komanawa/simple_farm_model/version/: index.rst.txt
docs/_static/: DairyModelCalculations_Jun24_v2.xlsx  farm_model_flow_chart_v2.drawio
docs/autoapi/: index.html
docs/autoapi/komanawa/simple_farm_model/: index.html
docs/autoapi/komanawa/simple_farm_model/base_simple_farm_model/: index.html
docs/autoapi/komanawa/simple_farm_model/memory_test/: index.html
docs/autoapi/komanawa/simple_farm_model/run_multiprocess/: index.html
docs/autoapi/komanawa/simple_farm_model/s_curve_explore/: index.html
docs/autoapi/komanawa/simple_farm_model/simple_dairy_model/: index.html
docs/autoapi/komanawa/simple_farm_model/speed_test/: index.html
docs/autoapi/komanawa/simple_farm_model/stock_rate_conversion/: index.html
docs/autoapi/komanawa/simple_farm_model/utils/: index.html
docs/autoapi/komanawa/simple_farm_model/version/: index.html
docs_build/: conf.py  index.rst  readme.txt
docs_build/_static/: farm_model_flow_chart.drawio  farm_model_flow_chart_v2.drawio
src/komanawa/komanawa_simple_farm_model/: base_simple_farm_model.py  simple_dary_model.py
src/komanawa/simple_farm_model/: CITATION.cff  __init__.py  base_simple_farm_model.py  memory_test.py  run_multiprocess.py  s_curve_explore.py  simple_dairy_model.py  simple_dary_model.py  speed_test.py  stock_rate_conversion.py  utils.py  version.py
src/komanawa/simple_farm_model/test_data/: eyrewell_pg.npz
tests/: first_dairy_test.py  test_basic_farm_model.py  test_simple_dairy_model.py
tests/test_data/: baseline-mod-median.csv  expect_test_model_with_data.nc  expect_test_model_with_data_SC.nc  expect_test_model_with_data_SC_coarse_opt.nc  expect_test_model_with_data_SC_step.nc  expect_test_model_with_data_coarse.nc  expect_test_model_with_data_step.nc
