[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src/"]

[tool.setuptools.package-data]
"*" = ["*.txt"]

[project]
name = "komanawa-simple-farm-model"
version = "v1.0.0"
authors = [
    { name = "Matt Dumont", email = "Matt@komanawa.com" },
]
description = "" # todo
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Komanawa-Solutions-Ltd/komanawa-simple-farm-model"
Issues = "https://github.com/Komanawa-Solutions-Ltd/komanawa-simple-farm-model/issues"
Documentation = "" # todo